[gd_scene load_steps=2 format=3 uid="uid://fvf2a3fvbmi8"]

[ext_resource type="Script" uid="uid://clbdppcyo31q3" path="res://scripts/ui/UIManager.gd" id="1_8ewf6"]

[node name="UIManager" type="CanvasLayer"]
script = ExtResource("1_8ewf6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.374
anchor_top = 0.255
anchor_right = 0.39
anchor_bottom = 0.255
offset_left = -180.848
offset_top = -76.24
offset_right = -104.28
offset_bottom = 50.76

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Score:0"

[node name="BaseHealthLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Base HP:100"

[node name="NextTowerPanel" type="Panel" parent="VBoxContainer" node_paths=PackedStringArray("shortcut_context")]
top_level = true
light_mask = 5
layout_mode = 2
shortcut_context = NodePath(".")

[node name="NextTowerLabel" type="Label" parent="VBoxContainer/NextTowerPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = -1.274
anchor_right = 3.242
offset_left = 122.03
offset_top = 8.0
offset_right = -212.99
offset_bottom = 31.0
text = "Next Tower:"
